# sendUssd--android

./: .gitignore  README.md  settings.gradle
app/: CMakeLists.txt  build.gradle  sendUssd.jks
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/androidTest/java/com/project/setussd/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: ussd_executor.cpp  uusd_jni.cpp
app/src/main/java/com/project/setussd/: Contact.java  MyApplication.java
app/src/main/java/com/project/setussd/bean/: ApiCallback.java  ApiResponse.java  DevNodeInfo.java  ErrorCode.java  UssAction.java
app/src/main/java/com/project/setussd/log/: UssdLogger.java  (+1 more)
app/src/main/res/color/: switch_thumb_colors.xml  switch_track_colors.xml
app/src/main/res/drawable/: close_button_background.xml  dialog_background.xml  edittext_background.xml  info_background.xml  result_background.xml  screenshot_background.xml  switch_thumb.xml  switch_track.xml
app/src/main/res/layout/: activity_main.xml  activity_mains.xml  activity_title.xml  activity_ussdmain.xml  dialog_custom_ussd.xml  dialog_input.xml  dialog_input_pwd.xml  dialog_result.xml  overlay_input_dialog.xml
app/src/main/res/menu/: menu_more.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-v27/: themes.xml
app/src/main/res/xml/: accessibility.xml  accessibility_config.xml
app/src/test/java/com/project/setussd/: ExampleUnitTest.java
(+23 files in other folders)
